[gd_scene load_steps=6 format=3 uid="uid://duvsvsvu8biwm"]

[ext_resource type="Script" path="res://Scenes/ui/mainMenu/main_menu.gd" id="1_lnqmy"]
[ext_resource type="Texture2D" uid="uid://dqm6vnjtnccog" path="res://Assets/menu/bg.jpg" id="2_kxh0j"]
[ext_resource type="AudioStream" uid="uid://dddf3hd2y8sew" path="res://Scenes/ui/mainMenu/main_menu.mp3" id="3_58un0"]
[ext_resource type="AudioStream" uid="uid://dd0r58g6juusx" path="res://Scenes/ui/button_click.wav" id="4_why7i"]
[ext_resource type="AudioStream" uid="uid://bmif647trnf8x" path="res://Scenes/ui/button_hover.wav" id="5_niext"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lnqmy")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kxh0j")
expand_mode = 2
stretch_mode = 5

[node name="MenuButtons" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 150)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuButtons"]
layout_mode = 2

[node name="startButton" type="Button" parent="MenuButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start Game"

[node name="quitButton" type="Button" parent="MenuButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_58un0")
autoplay = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_why7i")

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_niext")

[connection signal="mouse_entered" from="MenuButtons/VBoxContainer/startButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="MenuButtons/VBoxContainer/startButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="MenuButtons/VBoxContainer/quitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="MenuButtons/VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
